Modified code to accept DTO requests not entity requests. Added DTO validation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.password=
 # JPA & Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+# Wait for hibernate to create tables from entities before inserting using resources/data.sql
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 
